# FakeNilc

./: Pipfile  README.rst  classify.py  extract.py  main.py  pyproject.toml  readme.MD  reduce.py  textshrink.py  todo.MD
arffextractor/: arff.py  bow.py  liwc.py  pos.py
extractor/: arff.py  bow.py  liwc.py  metrics.py  pos.py  preprocessing.py
fakenilc/: evaluate.py  extract.py  reduce.py  todo.MD
fakenilc/preprocess/: bow.py  liwc.py  metrics.py  pos.py  reduce.py  syntax.py  utils.py
preprocess/: bow.py  liwc.py  metrics.py  pos.py  preprocessing.py  reduce.py  utils.py
utils/: liwc.txt
var/: liwc.txt  stopwords.txt
var/lxparser/: cintil.ser
