[tool.poetry]
name = "FakeNilc"
version = "0.1.0"
description = "FakeNilc is a set of tools written in python3 to train Machine Learning models for fake news detection. Models trained using this mini-framework are being used in our website and in a whatsapp bot. More info in our website:"
authors = ["Rafael Monteiro <rafael.amonteiro@loggi.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6.1"
nltk = "^3.4.5"
nlpnet = "^1.2.4"
pandas = "^1.0.3"
numpy = "^1.18.2"
ipython = "^7.13.0"
sklearn = "^0.0"

[tool.poetry.scripts]
reduce = "fakenilc.reduce:main"
extract = "fakenilc.extract:main"
evaluate = "fakenilc.evaluate:main"


[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
